# resources

./: .gitignore  README.md
_meta/: README.md  changelog.md  conventions.md  how-to-add-entries.md  reading-queue.md
agent-theory/: README.md
agent-theory/notes/: README.md  a-mem-and-agemem.md  evaluating-agents.md  memory-landscape-2026.md  memory-systems.md  multi-agent-orchestration.md  rag-patterns.md  react-pattern.md
agent-theory/papers/: README.md  crystallization-theory.md  keos.md  mkp.md  stg-eut.md
bootstrap/: README.md  install-claude-code.sh  install-codex.sh  install-mcp.sh  install-skills.sh  install.sh  status.sh  uninstall.sh
bootstrap/lib/: common.sh  symlink.sh
claude-code/: README.md
claude-code/notes/: README.md  agents-md-patterns.md  claude-code-2026-features.md  hooks-and-automation.md  monitor-tool-pattern.md  prompt-caching-tiers.md  settings-and-plugins.md
claude-code/templates/: AGENTS.md  CLAUDE.md  settings.json
codex/: README.md
codex/notes/: README.md  agents-md-for-codex.md  config-patterns.md  plugins-2026.md
codex/templates/: AGENTS.md  config.toml
mcp/: README.md
mcp/notes/: README.md  building-a-server.md  debugging-mcp.md  mcp-fundamentals.md  server-cards.md
mcp/templates/: servers.txt
mcp/templates/server-python/: README.md  pyproject.toml
mcp/templates/server-python/src/mcp_server_demo/: __init__.py  __main__.py  server.py
need-to-organize/: README.md
skills/: README.md
skills/notes/: README.md  distilling-from-practice.md  skill-anti-patterns.md  skill-authoring-patterns.md  (+2 more)
(+28 files in other folders)
