[project]
name = "mcp-server-demo"
version = "0.1.0"
description = "Minimal Python MCP server starter (stdio transport, one tool)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
]

[project.scripts]
mcp-server-demo = "mcp_server_demo.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_demo"]
